# Image-generator-public

./: .gitignore  .gitmodules  CMakeLists.txt  InputFormat.md  NOTICE  README.md
.github/workflows/: cmake.yml  install-vulkan.sh
scenes/: frame.xml  frame_cpu.xml  frame_one_seed.xml
shaders/: glsl_def.glsl  trace.comp  trace_one_seed.comp
shaders-build/: trace.comp.spv  trace_one_seed.comp.spv
shaders/common/: aabb.glsl  cam_data.glsl  environment.glsl  intersection.glsl  kd_tree_node_data.glsl  light.glsl  material.glsl  params.glsl  random.glsl  ray.glsl  triangle.glsl  vertex.glsl
src/: def.h  main.cpp
src/math/: matr.cpp  matr.h  ray.cpp  ray.h  vec.cpp  vec.h
src/render/: base_render.h  render.cpp  render.h
src/render/cpu_render/: cpu_hdr.cpp  cpu_hdr.h  cpu_render.cpp  cpu_render.h  trace.cpp  trace.h
src/render/vulkan_render/: vulkan_render.cpp  vulkan_render.h
src/scene/: aabb.cpp  aabb.h  cam.cpp  cam.h  environment.cpp  environment.h  grid.cpp  grid.h  kd_tree.cpp  kd_tree.h  kd_tree_node_data.h  material.cpp  material.h  params.h  scene.cpp  scene.h  scene_data.h  shape.cpp  shape.h  texture.h  triangle.cpp  triangle.h
src/scene_loader/: scene_loader.cpp  scene_loader.h
src/scenes/: frame.xml
src/utils/: error.cpp  error.h  image.cpp  image.h  parallel_for.cpp  parallel_for.h
src/vulkan_wrappers/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set_layout.cpp  descriptor_set_layout.h  event.cpp  event.h  fence.cpp  fence.h  memory.cpp  memory.h  pipeline_cache.cpp  pipeline_cache.h  pipeline_layout.cpp  pipeline_layout.h  queue.cpp  queue.h  semaphore.cpp  semaphore.h  shader_module.cpp  shader_module.h  vulkan_application.cpp  vulkan_application.h  vulkan_validation.cpp  vulkan_validation.h
tests/: cpu_and_gpu_render_should_get_equal.cpp  cpu_and_gpu_render_with_scene_loader_test.cpp  matrix_tests.cpp  tests_main.cpp  vec_tests.cpp
tests/scenes/: frame.xml  frame_cpu.xml  frame_one_seed.xml
